// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionRecipients should render a recipients array 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Recipients (2)
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="-my-2"
        >
          <div
            class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
          >
            <div
              class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                    role="row"
                  >
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Avatar
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Address
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Amount
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                    data-testid="recipient-list__recipient-list-item"
                  >
                    <td
                      class="py-4 w-12"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 keFjxD"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="test-address"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                            title="test-address"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-4"
                    >
                      <div
                        class="max-w-lg"
                      >
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            test-address
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-4 text-right"
                    >
                      <div
                        class="Label-sc-1tj9hzr-0 ganlOQ"
                        color="danger"
                      >
                        <span
                          data-testid="Amount"
                        >
                          + 0.00000001 DARK
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                    data-testid="recipient-list__recipient-list-item"
                  >
                    <td
                      class="py-4 w-12"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 keFjxD"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="test-address"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                            title="test-address"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-4"
                    >
                      <div
                        class="max-w-lg"
                      >
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            test-address
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-4 text-right"
                    >
                      <div
                        class="Label-sc-1tj9hzr-0 ganlOQ"
                        color="danger"
                      >
                        <span
                          data-testid="Amount"
                        >
                          + 0.00000001 DARK
                        </span>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionRecipients should render a single recipient 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Recipient
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="inline-flex items-center no-ligatures"
        >
          <span
            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
            data-testid="address__wallet-address"
          >
            test-address
          </span>
        </div>
      </div>
    </div>
    <div
      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
      data-testid="Avatar"
    >
      <div
        class="w-full h-full"
      >
        <img
          alt="test-address"
          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
          title="test-address"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionRecipients should render a single recipient with alias 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Recipient
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="inline-flex items-center no-ligatures"
        >
          <span
            class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
            data-testid="address__wallet-name"
          >
            <span
              class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
              data-testid="TruncateEnd"
            >
              test-alias
            </span>
          </span>
          <span
            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
            data-testid="address__wallet-address"
          >
            test-address
          </span>
        </div>
      </div>
    </div>
    <div
      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
      data-testid="Avatar"
    >
      <div
        class="w-full h-full"
      >
        <img
          alt="test-address"
          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
          title="test-address"
        />
      </div>
    </div>
  </div>
</div>
`;
